--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 }
 
 :root{
-    --cor-um: #000000;
-    --cor-dois: #ff0000;
-    --cor-tres: #940d0d;
+    --cor-um: #ffffff;
+    --cor-dois: #898997;
+    --cor-tres: #f7f7f7;
     --cor-quatro: #c53838;
     --cor-cinco: #f31c1c;
     --texto-corpo: "raleway", sans-serif;
@@ -16,10 +16,17 @@
 }
 
 body{
-    background:#e08f8f;
-    color: #411919;
+    background:#272fa5;
+    color: #7c7979;
 
     font-family: var(--texto-titulo);
+}
+.cabecalho{
+    background-color: #000000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px;
 }
 .cabecalho-img{
     width: 15%;
@@ -33,3 +40,35 @@ body{
     margin-right: 24px;
 }
 
+.principal-capa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    background-image: url(img/fundo.jpg);
+    background-repeat: no-repeat;
+    padding: 24px 12px;
+}
+ 
+.principal-capa__conteudo{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.principal-capa__titulo{
+    font-family: var(--texto-titulo);
+    font-size: 32px;
+    color: var(--cor-um);
+    margin-bottom: 12px;
+}
+
+.principal-capa__texto{
+    font-size: 24px;
+    margin-top: 24px;
+}
+
+.principal-capa__imagem{
+    border-radius: 0 5% 0 5%;
+
+}
