--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ body{
 }
 
 .propaganda__imagem{
+    margin-left: 20%;
     width: 50%;
 }
 
@@ -120,4 +121,9 @@ propaganda__titulo:hover{
 .propaganda__texto{
     font-size: 24px;
     color: var(--cor-dois);
+}
+
+.propaganda02{
+    display: flex;
+    flex-direction: column;
 }
