--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
 .principal-capa__combotao{
     display: flex;
     flex-direction: column;
-    aling-items: flex-start;
+    align-items: flex-start;
 }
  
 .principal-capa__conteudo{
@@ -99,6 +99,7 @@ body{
     grid-template-columns: 1fr 1fr;
     text-align: center;
     justify-content: center;
+    align-items: center;
     align-items: 0 7em;
 }
 
@@ -113,7 +114,7 @@ body{
     color: var(--cor-um);
 }
 
-propaganda__titulo:hover{
+.propaganda__titulo:hover{
     text-shadow: 3px 3px 5px var(--cor-dois);
     transition: 700ms;
 }
